# docutils-rst-writer

./: .gitignore  LICENSE.rst  README.rst  setup.cfg  tox.ini
.github/workflows/: test.yaml
docutils_rst_writer/: __init__.py  table.py  writer.py
tests/: fuzz.py  test_table.py  test_writer.py
