[metadata]
name = docutils-rst-writer
description = Writer for docutils that outputs reStructuredText.
long_description = file: README.rst
version = 0.1.0
url = https://github.com/SamWilsn/docutils-rst-writer
license_files =
    LICENSE.rst
classifiers =
    License :: OSI Approved :: BSD License

[options]
packages =
    docutils_rst_writer

python_requires = >=3.7
install_requires =
    docutils>=0.17.1

[options.extras_require]
test =
    pytest>=6.2,<7
    Pygments>=2.10,<3

[flake8]
extend-ignore =
    E203    # Ignore: Whitespace before ':'

# vim: set ft=dosini:
